--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "nodemon index.ts",
-    "mime": "node other/mimeTypesConfigure.js"
+    "mime": "node other/mimeTypesConfigure.js",
+    "build": "tsc"
   },
   "author": "Seva",
   "license": "ISC",
